namespace Metaspesa.Domain.Users;

public enum Role {
  None,
  Shopper = 1,
  ProductManager = 2,
}